# UIMaker2

./: .gitignore  CMakeLists.txt  EntityComponentSystem.cpp  EntityComponentSystem.hpp  EntityTreeModel.cpp  EntityTreeModel.hpp  MainWindow.cpp  MainWindow.hpp  PropertyEditorPanel.cpp  PropertyEditorPanel.hpp  SceneDocument.cpp  SceneDocument.hpp  SceneElementItem.cpp  SceneElementItem.hpp  main.cpp  mainwindow.ui  uibin_format_spec.txt
.claude/: settings.local.json
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.hpp  mainwindow.ui
src/components/: ButtonComponent.cpp  ButtonComponent.hpp  DragSlotComponent.cpp  DragSlotComponent.hpp  DropdownComponent.cpp  DropdownComponent.hpp  GridLayoutComponent.cpp  GridLayoutComponent.hpp  IconComponent.cpp  IconComponent.hpp  ImageComponent.cpp  ImageComponent.hpp  ListRepeaterComponent.cpp  ListRepeaterComponent.hpp  MinimapComponent.cpp  MinimapComponent.hpp  ModalComponent.cpp  ModalComponent.hpp  PanelComponent.cpp  PanelComponent.hpp  ProgressBarComponent.cpp  ProgressBarComponent.hpp  RadialMenuComponent.cpp  RadialMenuComponent.hpp  ScrollBoxComponent.cpp  ScrollBoxComponent.hpp  SlotComponent.cpp  SlotComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  StackLayoutComponent.cpp  StackLayoutComponent.hpp  TabContainerComponent.cpp  TabContainerComponent.hpp  TextComponent.cpp  TextComponent.hpp  TextInputComponent.cpp  TextInputComponent.hpp  ToggleComponent.cpp  ToggleComponent.hpp  (+4 more)
src/core/: Anchor.hpp  Component.hpp  UiElement.hpp
src/gizmos/: Gizmo.hpp  GizmoManager.hpp  RotateGizmo.cpp  RotateGizmo.hpp  ScaleGizmo.cpp  ScaleGizmo.hpp  TranslateGizmo.cpp  TranslateGizmo.hpp
src/input/: EditorContext.cpp  EditorContext.hpp  InputEvents.hpp  InputHandler.hpp  PanZoomHandler.hpp  TransformInputHandler.cpp  TransformInputHandler.hpp
src/render/: GizmoRenderPass.hpp  RenderPass.hpp  RenderPipeline.hpp  SelectionRenderPass.hpp
src/scene/: SceneDocument.cpp  SceneDocument.hpp  SceneElementItem.cpp  SceneElementItem.hpp  SceneExporter.cpp  SceneExporter.hpp
src/tools/: RotateTool.cpp  RotateTool.hpp  ScaleTool.cpp  ScaleTool.hpp  Tool.hpp  ToolManager.hpp  TranslateTool.cpp  TranslateTool.hpp
src/ui/: EntityTreeModel.cpp  EntityTreeModel.hpp  PropertyEditorPanel.cpp  PropertyEditorPanel.hpp  ViewportWidget.hpp
